@@ -30,11 +30,16 @@ def baseDockerImage = propertyOrEnvOrDefault("solr.docker.baseImage", "SOLR_DOCK
 def githubUrlOrMirror = propertyOrEnvOrDefault("solr.docker.githubUrl", "SOLR_DOCKER_GITHUB_URL", 'github.com')
 
 // Build directory locations
-def dockerBuildDistribution = "$buildDir/distributions"
 def imageIdFile = "$buildDir/image-id"
 
 configurations {
   packaging {
+    canBeResolved = true
+  }
+  solrArtifacts {
+    canBeResolved = true
+  }
+  dockerContext {
     canBeResolved = true
   }
   dockerImage {
@@ -42,52 +47,68 @@ configurations {
   }
 }
 
+ext {
+  packagingDir = file("${buildDir}/packaging")
+  dockerContextFile = "context.tgz"
+  dockerContextPath = "${buildDir}/${dockerContextFile}"
+}
+
 dependencies {
-  packaging project(path: ":solr:packaging", configuration: 'archives')
+  packaging files(packagingDir) {
+    builtBy 'assemblePackaging'
+  }
+
+  solrArtifacts project(path: ":solr:packaging", configuration: 'archives')
+
+  dockerContext files(dockerContextPath) {
+    builtBy 'dockerContext'
+  }
 
   dockerImage files(imageIdFile) {
     builtBy 'dockerBuild'
   }
 }
 
-task dockerTar(type: Tar) {
-  group = 'Docker'
-  description = 'Package docker context to prepare for docker build'
+task assemblePackaging(type: Sync) {
+  description = 'Assemble docker scripts and Dockerfile for Solr Packaging'
 
-  dependsOn configurations.packaging
-  into('scripts') {
-    from file('scripts')
-    fileMode 755
-  }
-  into('releases') {
-    from configurations.packaging
-    include '*.tgz'
-  }
-  from file('Dockerfile')
-  destinationDirectory = file(dockerBuildDistribution)
-  extension 'tgz'
-  compression = Compression.GZIP
+  from(projectDir, {
+    include "Dockerfile"
+    include "scripts/**"
+  })
+
+  into packagingDir
 }
 
-task dockerBuild(dependsOn: tasks.dockerTar) {
+task dockerContext(type: Sync) {
+  description = 'Sync Solr tgz to become docker context'
+
+  from(configurations.solrArtifacts, {
+    include "*.tgz"
+    rename { file -> dockerContextFile }
+  })
+
+  into buildDir
+}
+
+task dockerBuild(dependsOn: configurations.dockerContext) {
   group = 'Docker'
   description = 'Build Solr docker image'
 
   // Ensure that the docker image is rebuilt on build-arg changes or changes in the docker context
   inputs.properties([
           baseDockerImage: baseDockerImage,
-          githubUrlOrMirror: githubUrlOrMirror,
-          version: version
+          githubUrlOrMirror: githubUrlOrMirror
   ])
-  inputs.dir(dockerBuildDistribution)
+  inputs.files(dockerContextPath)
 
   doLast {
     exec {
-      standardInput = tasks.dockerTar.outputs.files.singleFile.newDataInputStream()
+      standardInput = configurations.dockerContext.singleFile.newDataInputStream()
       commandLine "docker", "build",
+              "-f", "solr-${version}/docker/Dockerfile",
               "--iidfile", imageIdFile,
               "--build-arg", "BASE_IMAGE=${inputs.properties.baseDockerImage}",
-              "--build-arg", "SOLR_VERSION=${version}",
               "--build-arg", "GITHUB_URL=${inputs.properties.githubUrlOrMirror}",
               "-"
     }
