@@ -8,7 +8,7 @@ if [[ "${VERBOSE:-}" == "yes" ]]; then
     set -x
 fi
 
-. /opt/docker-solr/scripts/run-initdb
+run-initdb
 
 CORE=demo
 
